Fixed layout bugs

--- a/frontend/src/app/modules/main-page/components/left-side-menu/left-side-menu.component.sass
+++ b/frontend/src/app/modules/main-page/components/left-side-menu/left-side-menu.component.sass
@@ -50,6 +50,10 @@
       a
         display: block
         color: $text-common
-        padding: 5px 0px 5px 7px
+        padding: 5px 0px 5px 15px
+        width: 200px
+        white-space: nowrap
+        text-overflow: ellipsis
+        overflow: hidden
         &:hover
           color: $primary
